python-server/k8s/dev/k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvs-llm-proxy
  namespace: llmops-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      component: tvs-llm-proxy
  template:
    metadata:
      labels:
        component: tvs-llm-proxy
    spec:
      containers:
        - name: tvs-llm-proxy
          image: nyuwa-user-docker-local.arf.tesla.cn/nyuwa-ns-voc/llm-proxy:12110002
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 201m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 512Mi
          ports:
            - containerPort: 18000
---
apiVersion: v1
kind: Service
metadata:
  name: tvs-llm-proxy-svc
  namespace: llmops-dev
  labels:
    component: tvs-llm-proxy
spec:
  type: ClusterIP
  ports:
  - port: 18000
    name: http-web
    protocol: TCP
    targetPort: 18000
  selector:
    component: tvs-llm-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tvs-llm-proxy-ingress
  namespace: llmops-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 300s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 300s
spec:
  rules:
  - host: tvs-llm-proxy.cn-pvg06-eng-r1-general.k8s.tesla.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: tvs-llm-proxy-svc
              port:
                name: http-web
